# cross-border-ai-audit

./: .gitignore  BACKLOG.md  CAPABILITIES.md  Dockerfile  QUICKSTART.md  README.md  accuracy_audit.py  accuracy_probe.py  app.py  authority.py  bias_audit.py  completeness.py  demo.sh  engine.py  evaluators.py  evidence.py  fetch_hmda.py  fetch_incidents.py  gen_teacher_hiring.py  incidents.py  ingest.py  ingestion.py  injection_audit.py  injection_probe.py  main.py  model_audit.py  model_client.py  monitor.py  privacy_audit.py  probe_education.py  probe_model.py  pyproject.toml  recommender_audit.py  regulations.py  report.py  requirements.txt  safety_audit.py  safety_probe.py  sample_report.py  sampling.py  (+3 more)
.github/workflows/: python-app.yml
data/: HMDA_PROVENANCE.txt  SNAPSHOT_PROVENANCE.txt  TEACHER_HIRING_PROVENANCE.txt  ai_incidents_snapshot.csv  attestation_pubkey.hex  bias_audit_template.csv  disclosure_schedule.json  evidence_ledger.jsonl  hmda_demo_sample.csv  regulations.json  source_status.json  teacher_hiring_demo.csv
data/probes/: accuracy.jsonl  accuracy.provenance.json  essay_screen.jsonl  essay_screen.provenance.json  hiring_screen.jsonl  hiring_screen.provenance.json  hiring_screen_opus.jsonl  hiring_screen_opus.provenance.json  hiring_screen_sonnet.jsonl  hiring_screen_sonnet.provenance.json  injection.jsonl  injection.provenance.json  safety.jsonl  safety.provenance.json
data/source_copies/: manifest.json
tests/: test_accuracy.py  test_authority.py  test_bias_audit.py  test_cli_errors.py  test_completeness.py  test_ingestion.py  test_injection.py  test_model_audit.py  test_monitor.py  test_privacy.py  test_recommender.py  test_regulations.py  test_safety.py  test_sampling.py  test_scale.py
